--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /[Uu]ser[Ss]ettings/
 /[Aa]ssets/TextMesh Pro/
 /[Aa]ssets/Settings/
+/[Aa]ssets/WebGLSupport/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
